# S5-SHB-Agent

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  publish_test.py  pyproject.toml
engine/: .env.example  __init__.py  agent.py  anomaly_agent.py  anomaly_models.py  arbitration_agent.py  blockchain.py  config.py  conversation.py  device_config.py  devices.py  governance_contract.py  health.py  mcp_client.py  mcp_server.py  model_router.py  models.json  nlu_agent.py  offchain.py  resident_preferences.py  scenarios.py  session_manager.py
engine/adapters/: __init__.py  base.py  http_adapter.py  mock_adapter.py  mqtt_adapter.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/components/: AttackChainBuilder.vue  ScenarioBrowser.vue
frontend/src/composables/: useDragAndDrop.ts  useWebSocket.ts
frontend/src/data/: preloadedScenarios.ts
frontend/src/router/: index.ts
frontend/src/services/: AgentService.ts  PreloadedScenarioManager.ts  apiClient.ts
frontend/src/stores/: homeBuilder.ts  session.ts  threatBuilder.ts
web/: __init__.py  main.py  router.py
web/api/: __init__.py  agents.py  anomaly.py  audit.py  blockchain.py  chat.py  devices.py  governance.py  health.py  home.py  nlu.py  offchain.py  report.py  scenarios.py  sessions.py  simulation.py  threats.py
web/core/: __init__.py  bridge.py  hes_telemetry_sync.py  home_adapter.py  home_store.py  orchestrator.py  s5_hes_client.py  state.py  threat_store.py
web/ws/: __init__.py  manager.py  streams.py
(+11 files in other folders)
